src/tests/test-src/errors/E80-alias-with-doublecolon.syntran
// E80: alias-with-doublecolon
// A `use module::*` glob import was combined with an alias

use foo as bar::*;
